[package]
name = "lutim_uploader"
version = "0.1.0"
authors = ["l4p1n <l4p1n@l4p1n.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
inotify = "0.8.3"
serde = { version = "1.0.115", features = ['derive'] }
serde_json = "1.0.57"
reqwest = { version = "0.10.8", features = ['blocking'] }
rand = "0.7.3"

clipboard = "0.5.0"
notify-rust = "4.0.0"
webbrowser = "0.5.5"
